llvm-toolchain-3.2 (1:3.2repack-1~exp3) UNRELEASED; urgency=low

  * Fix some issues relative to the epoch change

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 17 Feb 2013 12:05:15 +0100

llvm-toolchain-3.2 (1:3.2repack-1~exp2) experimental; urgency=low

  * Install the python files for lldb. Thanks to Daniel Malea for spotting this.
  * Update of the clean target
  * Introduce an epoch to match the changes in bug #699899

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 13 Feb 2013 12:22:30 +0100

llvm-toolchain-3.2 (3.2repack-1~exp1) experimental; urgency=low

  * Build the whole LLVM toolchain at once. This includes:
    - LLVM
    - Clang
    - compiler-rt
    - lldb
    - polly
  * Also install clang-check & clang-tblgen in the clang-3.2 package
  * Fix the patch detection of clang from scan-build (Closes: #698352)
  * debian/patches/0050-powerpcspe-fp.diff: Add, hopefully fix FTBFS on
    powerpcspe, by disabling save / restore of floating point registers which
    don't exist on powerpcspe. Thanks to Roland Stigge for the patch.
    (Closes: #696474)
  * libLLVM-3.2.so.1 is now shipped only once (Closes: #696913)
  * Enable RTTI (Closes: #697754)
  * Introduce lldb as a new package (Closes: #698601)
  * Add a script pollycc which will call clang with the right arguments.
  * Use __builtin___clear_cache on ARM to fix a clang bug.
    Thanks to Matthias Klose.
  * Enable the r600 experimental backend for mesa 9.1.

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 09 Feb 2013 12:14:10 +0100