@@ -1,6 +1,8 @@
 llvm-toolchain-3.2 (1:3.2repack-1~exp3) UNRELEASED; urgency=low
 
   * Fix some issues relative to the epoch change
+  * Fix a wrong path in the _lldb.so Python symlink
+  * Remove the embedded copy of libjs-jquery (Closes: #701087)
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 17 Feb 2013 12:05:15 +0100
 
@@ -32,6 +34,5 @@ llvm-toolchain-3.2 (3.2repack-1~exp1) experimental; urgency=low
   * Add a script pollycc which will call clang with the right arguments.
   * Use __builtin___clear_cache on ARM to fix a clang bug.
     Thanks to Matthias Klose.
-  * Enable the r600 experimental backend for mesa 9.1.
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 09 Feb 2013 12:14:10 +0100
